k8s/base/nanomq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghanawaters-nanomq-service
  labels:
    app: ghanawaters-nanomq
spec:
  type: ClusterIP
  selector:
    app: ghanawaters-nanomq
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
  - name: mqtts
    port: 8883
    targetPort: 8883
    protocol: TCP
